import mongoose from 'mongoose';

const orderItemSchema = new mongoose.Schema(
  {
    menuItemId: { type: mongoose.Schema.Types.ObjectId, ref: 'MenuItem', required: true },
    name: { type: String, required: true }, // snapshot
    price: { type: Number, required: true }, // snapshot, VNĐ
    quantity: { type: Number, required: true, min: 1, default: 1 },
    customizations: {
      ice: { type: String, default: '' },
      sugar: { type: String, default: '' },
      sweetness: { type: String, default: '' },
      note: { type: String, default: '' },
    },
    status: {
      type: String,
      enum: ['dangphache', 'chuanbiphucvu', 'daphucvu'],
      default: 'dangphache',
    },
  },
  { _id: true }
);

const orderSchema = new mongoose.Schema(
  {
    // optional: online orders may not be tied to a physical table
    tableId: { type: mongoose.Schema.Types.ObjectId, ref: 'Table', default: null },
    staffId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true },
    source: { type: String, enum: ['staff', 'customer_kiosk', 'customer_online'], default: 'staff' },
    status: {
      type: String,
      enum: ['moi', 'daxacnhan', 'dathanhtoan', 'danglam', 'dangphache', 'chuanbiphucvu', 'daphucvu', 'hoantat'],
      default: 'moi',
    },
    paymentStatus: { type: String, enum: ['pending', 'paid', 'failed'], default: 'pending' },
    paymentMethod: {
      type: String,
      enum: ['tienmat', 'chuyenkhoan', 'momo', 'vnpay'],
      default: 'tienmat',
    },
    cashAmountDue: { type: Number, default: 0 },
    cashTenderedAmount: { type: Number, default: 0 },
    cashChangeAmount: { type: Number, default: 0 },
    subtotalAmount: { type: Number, default: 0 },
    discountAmount: { type: Number, default: 0 },
    promoDiscountAmount: { type: Number, default: 0 },
    memberDrinkDiscountAmount: { type: Number, default: 0 },
    memberTierDiscountAmount: { type: Number, default: 0 },
    pointDiscountAmount: { type: Number, default: 0 },
    pointsRedeemed: { type: Number, default: 0 },
    memberTier: { type: String, default: '' },
    totalAmount: { type: Number, default: 0 },
    customerId: { type: mongoose.Schema.Types.ObjectId, ref: 'Customer', default: null },
    customerName: { type: String, default: '' },
    note: { type: String, default: '' },
    tableChangeRequest: {
      status: {
        type: String,
        enum: ['none', 'pending', 'accepted'],
        default: 'none',
      },
      note: { type: String, default: '' },
      requestedAt: { type: Date, default: null },
      handledAt: { type: Date, default: null },
      handledBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User', default: null },
    },
    items: { type: [orderItemSchema], default: [] },
  },
  { timestamps: true }
);

orderSchema.index({ createdAt: -1 });

export default mongoose.model('Order', orderSchema);
